# aoc2021

./: .gitignore  README.md  new-day  shell.nix
01/ocaml/: mainA.ml  mainB.ml
02/ocaml/: common.ml  mainA.ml  mainB.ml
03/ocaml/: dune  mainA.ml  mainB.ml
04/ocaml/: card.ml  dune  mainA.ml  mainB.ml  parse.ml
05/ocaml/: common.ml  dune  mainA.ml  mainB.ml
06/ocaml/: mainA.ml  mainB.ml
07/ocaml/: common.ml  mainA.ml  mainB.ml
08/ocaml/: mainA.ml  mainB.ml
09/ocaml/: dune  mainA.ml  mainB.ml  seafloor.ml
10/ocaml/: mainA.ml  mainB.ml
11/ocaml/: dune  mainA.ml  mainB.ml  octopi.ml
12/ocaml/: cave.ml  caveGraph.ml  dune  mainA.ml  mainB.ml
13/ocaml/: mainA.ml  mainB.ml
14/ocaml/: common.ml  mainA.ml  mainB.ml
15/ocaml/: common.ml  dune  mainA.ml  mainB.ml
16/ocaml/: dune  mainA.ml  mainB.ml  parse.ml
17/ocaml/: common.ml  dune  mainA.ml  mainB.ml
18/ocaml/: common.ml  dune  mainA.ml  mainB.ml
19/ocaml/: dune  mainA.ml  mainB.ml
20/ocaml/: common.ml  dune  image.ml  mainA.ml  mainB.ml
21/ocaml/: dune  mainA.ml  mainB.ml
22/ocaml/: common.ml  mainA.ml  mainB.ml
template/ocaml/: .ocamlformat  common.ml
