(library
  (name card)
  (libraries core)
  (modules Card))

(library
  (name parse)
  (libraries core card)
  (modules Parse))

(executable
 (name mainA)
 (libraries core card parse)
 (modes byte exe)
 (modules MainA))

(executable
 (name mainB)
 (libraries core card parse)
 (modes byte exe)
 (modules MainB))
